# vectorguidance

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml
.github/workflows/: label.yml  labeler.yml  semantic-release.yml
examples/: example_bounded_interception.cpp  example_soft_landing.cpp  example_soft_landing_bounded.cpp
include/: bounded_interception.hpp  common.hpp  soft_landing.hpp
src/: bounded_interception.cpp  common.cpp  main.cpp  soft_landing.cpp
tests/: test_bounded_interception.cpp  test_soft_landing.cpp  test_times.cpp
